deploy: 2c2d909c379dbfe5a6ba62e560e732a431dbad11

--- a/rust/mini-redis/spawning.html
+++ b/rust/mini-redis/spawning.html
@@ -76,7 +76,7 @@
 
     <nav id="sidebar" class="sidebar" aria-label="Table of contents">
         <div class="sidebar-scrollbox">
-            <ol class="chapter"><li class="chapter-item expanded "><a href="../../intro/intro.html"><strong aria-hidden="true">1.</strong> Intro</a></li><li class="chapter-item expanded "><a href="../../go/go.html"><strong aria-hidden="true">2.</strong> GO</a></li><li class="chapter-item expanded "><a href="../../rust/rust.html"><strong aria-hidden="true">3.</strong> RUST</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../../rust/tower/rust_tower.html"><strong aria-hidden="true">3.1.</strong> Tower</a></li><li class="chapter-item expanded "><a href="../../rust/mini-redis/mini-redis.html"><strong aria-hidden="true">3.2.</strong> mini-redis</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../../rust/mini-redis/hello_tokio.html"><strong aria-hidden="true">3.2.1.</strong> Hello Tokio</a></li><li class="chapter-item expanded "><a href="../../rust/mini-redis/spawning.html" class="active"><strong aria-hidden="true">3.2.2.</strong> Spawning</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../../issues/issues.html"><strong aria-hidden="true">4.</strong> issues and solutions</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../../issues/docker/docker.html"><strong aria-hidden="true">4.1.</strong> docker</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../../issues/docker/docker_issues.html"><strong aria-hidden="true">4.1.1.</strong> 问题及解决方案</a></li></ol></li><li class="chapter-item "><a href="../../issues/mysql/mysql.html"><strong aria-hidden="true">4.2.</strong> mysql</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../../issues/mysql/mysql_issues.html"><strong aria-hidden="true">4.2.1.</strong> 问题及解决方案</a></li></ol></li><li class="chapter-item "><a href="../../issues/gitea/gitea.html"><strong aria-hidden="true">4.3.</strong> gitea</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../../issues/gitea/gitea_issues.html"><strong aria-hidden="true">4.3.1.</strong> 问题及解决方案</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../../links/links.html"><strong aria-hidden="true">5.</strong> Links</a></li><li class="chapter-item expanded "><a href="../../math/math.html"><strong aria-hidden="true">6.</strong> Math</a></li></ol>
+            <ol class="chapter"><li class="chapter-item expanded "><a href="../../intro/intro.html"><strong aria-hidden="true">1.</strong> Intro</a></li><li class="chapter-item expanded "><a href="../../go/go.html"><strong aria-hidden="true">2.</strong> GO</a></li><li class="chapter-item expanded "><a href="../../rust/rust.html"><strong aria-hidden="true">3.</strong> RUST</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../../rust/tower/rust_tower.html"><strong aria-hidden="true">3.1.</strong> Tower</a></li><li class="chapter-item expanded "><a href="../../rust/mini-redis/mini-redis.html"><strong aria-hidden="true">3.2.</strong> mini-redis</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../../rust/mini-redis/hello_tokio.html"><strong aria-hidden="true">3.2.1.</strong> Hello Tokio</a></li><li class="chapter-item expanded "><a href="../../rust/mini-redis/spawning.html" class="active"><strong aria-hidden="true">3.2.2.</strong> Spawning</a></li><li class="chapter-item "><a href="../../rust/mini-redis/shared_state.html"><strong aria-hidden="true">3.2.3.</strong> Shared state TODO</a></li><li class="chapter-item "><a href="../../rust/mini-redis/channels.html"><strong aria-hidden="true">3.2.4.</strong> Channels TODO</a></li><li class="chapter-item "><a href="../../rust/mini-redis/io.html"><strong aria-hidden="true">3.2.5.</strong> I/O TODO</a></li><li class="chapter-item "><a href="../../rust/mini-redis/framing.html"><strong aria-hidden="true">3.2.6.</strong> Framing TODO</a></li><li class="chapter-item "><a href="../../rust/mini-redis/async_in_depth.html"><strong aria-hidden="true">3.2.7.</strong> Async in depth TODO</a></li><li class="chapter-item "><a href="../../rust/mini-redis/select.html"><strong aria-hidden="true">3.2.8.</strong> Select TODO</a></li><li class="chapter-item "><a href="../../rust/mini-redis/streams.html"><strong aria-hidden="true">3.2.9.</strong> Streams TODO</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../../issues/issues.html"><strong aria-hidden="true">4.</strong> issues and solutions</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../../issues/docker/docker.html"><strong aria-hidden="true">4.1.</strong> docker</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../../issues/docker/docker_issues.html"><strong aria-hidden="true">4.1.1.</strong> 问题及解决方案</a></li></ol></li><li class="chapter-item "><a href="../../issues/mysql/mysql.html"><strong aria-hidden="true">4.2.</strong> mysql</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../../issues/mysql/mysql_issues.html"><strong aria-hidden="true">4.2.1.</strong> 问题及解决方案</a></li></ol></li><li class="chapter-item "><a href="../../issues/gitea/gitea.html"><strong aria-hidden="true">4.3.</strong> gitea</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../../issues/gitea/gitea_issues.html"><strong aria-hidden="true">4.3.1.</strong> 问题及解决方案</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../../links/links.html"><strong aria-hidden="true">5.</strong> Links</a></li><li class="chapter-item expanded "><a href="../../math/math.html"><strong aria-hidden="true">6.</strong> Math</a></li></ol>
         </div>
         <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
     </nav>
@@ -216,7 +216,6 @@ async fn process(socket: TcpStream) {
         connection.write_frame(&amp;response).await.unwrap();
     }
 }
-
 </code></pre></pre>
 <p>现在把它跑起来：</p>
 <pre><code class="language-zsh">cargo run
@@ -230,7 +229,7 @@ async fn process(socket: TcpStream) {
 <p>在跑服务端的那个终端，输出应该是下面这样：</p>
 <pre><code class="language-zsh">GOT: Array([Bulk(b&quot;set&quot;), Bulk(b&quot;hello&quot;), Bulk(b&quot;world&quot;)])
 </code></pre>
-<h2 id="并发"><a class="header" href="#并发">并发</a></h2>
+<h2 id="concurrency-并发"><a class="header" href="#concurrency-并发">Concurrency （并发）</a></h2>
 <p>我们的 server 有一个问题（除去只回复了错误）。它一次只会处理一个入站请求：当一个连接被接受，我们的 server 停留在 accept loop 里面，直到 <code>response</code> 被完全写入 socket。</p>
 <p>我们肯定是希望我们的 Redis server 能够处理并发的请求，为了达到这个目的，我们需要加并发。</p>
 <blockquote>
@@ -338,6 +337,192 @@ help: to force the async block to take ownership of `v` (and any other
 <p>插一句嘴：上面这块儿我是琢磨了很久，但是还有一些内容没完全明白，看来还是有待提升呐～</p>
 <h2 id="send-bound"><a class="header" href="#send-bound"><code>Send</code> bound</a></h2>
 <p>从 <code>tokio::spawn</code> 生成的任务<strong>必须</strong>实现 <code>Send</code> trait 。这样才能当任务被 <code>.await</code> 后允许 Tokio runtime 在线程之间移动他们。</p>
+<p>因为水平有限，可能有误，所以附上原文后再给出我的理解：</p>
+<blockquote>
+<p>Tasks are <code>Send</code> when <strong>all</strong> data that is held <strong>across</strong> <code>.await</code> calls is <code>Send</code>. This is a bit subtle. When <code>.await</code> is called, the task yields back to the scheduler. The next time the task is executed, it resumes from the point it last yielded. To make this work, all state that is used <strong>after</strong> <code>.await</code> must be saved by the task. If this state is <code>Send</code>, i.e. can be moved across threads, then the task itself can be moved across threads. Conversely, if the state is not <code>Send</code>, then neither is the task.</p>
+</blockquote>
+<p>当一个任务内所有跨过 <code>.await</code> 调用的数据都实现了 <code>Send</code> 时，这个任务才是实现了 <code>Send</code> 的。如下例子就会因为 <code>a</code> 没有实现 <code>Send</code> 且跨过了 <code>.await</code> 调用而导致编译失败：</p>
+<pre><pre class="playground"><code class="language-rust">use tokio::net::TcpListener;
+
+#[tokio::main]
+async fn main() {
+    // 绑定 listener 到一个地址
+    let listener = TcpListener::bind(&quot;127.0.0.1:6379&quot;).await.unwrap();
+
+    loop {
+        // 解构出来的第二个 item 包含一个新 connection 的一对 IP 和 port，这里将其忽略了
+        let (socket, _) = listener.accept().await.unwrap();
+        let a = Rc::new(&quot;Rc does not impl Send&quot;);
+        // 生成一个新任务，socket 的所有权被移动到了这个新任务里面，并在那里被处理。
+        tokio::spawn(async move {
+            process(socket).await;
+            println!(&quot;{:?}&quot;, a);
+        });
+    }
+}
+</code></pre></pre>
+<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>error: future cannot be sent between threads safely
+   --&gt; src/main.rs:16:9
+    |
+16  |         tokio::spawn(async move {
+    |         ^^^^^^^^^^^^ future created by async block is not `Send`
+    |
+    = help: within `impl std::future::Future&lt;Output = ()&gt;`, the trait `std::marker::Send` is not implemented for `std::rc::Rc&lt;&amp;str&gt;`
+note: captured value is not `Send`
+   --&gt; src/main.rs:18:30
+    |
+18  |             println!(&quot;{:?}&quot;, a);
+    |                              ^ has type `std::rc::Rc&lt;&amp;str&gt;` which is not `Send`
+note: required by a bound in `tokio::spawn`
+   --&gt; /home/m4n5ter/.cargo/registry/src/rsproxy.cn-8f6827c7555bfaf8/tokio-1.21.2/src/task/spawn.rs:127:21
+    |
+127 |         T: Future + Send + 'static,
+    |                     ^^^^ required by this bound in `tokio::spawn`
+
+error: could not compile `my-redis` due to previous error
+<span class="boring">}
+</span></code></pre></pre>
+<p>因为用了 <code>.await</code> 后，当前任务会让出线程控制权，任务的当前状态会被整个打包，并且可能会在多个线程间传递这个任务，存在任务会在不同的线程被执行的可能，而数据在线程间传递要求实现 <code>Send</code> trait 。</p>
+<p>下面是官方给出的两个例子：</p>
+<p>成功：</p>
+<pre><pre class="playground"><code class="language-rust">use tokio::task::yield_now;
+use std::rc::Rc;
+
+#[tokio::main]
+async fn main() {
+    tokio::spawn(async {
+        // The scope forces `rc` to drop before `.await`.
+        {
+            let rc = Rc::new(&quot;hello&quot;);
+            println!(&quot;{}&quot;, rc);
+        }
+
+        // `rc` is no longer used. It is **not** persisted when
+        // the task yields to the scheduler
+        yield_now().await;
+    });
+}
+</code></pre></pre>
+<p>失败：</p>
+<pre><pre class="playground"><code class="language-rust">use tokio::task::yield_now;
+use std::rc::Rc;
+
+#[tokio::main]
+async fn main() {
+    tokio::spawn(async {
+        let rc = Rc::new(&quot;hello&quot;);
+
+        // `rc` is used after `.await`. It must be persisted to
+        // the task's state.
+        yield_now().await;
+
+        println!(&quot;{}&quot;, rc);
+    });
+}
+</code></pre></pre>
+<p>错误报告：</p>
+<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>error: future cannot be sent between threads safely
+   --&gt; src/main.rs:6:5
+    |
+6   |     tokio::spawn(async {
+    |     ^^^^^^^^^^^^ future created by async block is not `Send`
+    | 
+   ::: [..]spawn.rs:127:21
+    |
+127 |         T: Future + Send + 'static,
+    |                     ---- required by this bound in
+    |                          `tokio::task::spawn::spawn`
+    |
+    = help: within `impl std::future::Future`, the trait
+    |       `std::marker::Send` is not  implemented for
+    |       `std::rc::Rc&lt;&amp;str&gt;`
+note: future is not `Send` as this value is used across an await
+   --&gt; src/main.rs:10:9
+    |
+7   |         let rc = Rc::new(&quot;hello&quot;);
+    |             -- has type `std::rc::Rc&lt;&amp;str&gt;` which is not `Send`
+...
+10  |         yield_now().await;
+    |         ^^^^^^^^^^^^^^^^^ await occurs here, with `rc` maybe
+    |                           used later
+11  |         println!(&quot;{}&quot;, rc);
+12  |     });
+    |     - `rc` is later dropped here
+<span class="boring">}
+</span></code></pre></pre>
+<p>我们会在下一节 Shared state 来更深入的探讨这个错误的特殊情况。</p>
+<h2 id="store-values存储值"><a class="header" href="#store-values存储值">Store values（存储值）</a></h2>
+<p>我们现在将要实现 <code>process</code> 函数来处理发送过来的命令。我们使用 <code>HashMap</code> 来存储值。<code>SET</code> 命令将会插入数据到 <code>HashMap</code> ，<code>GET</code> 值会加载数据。另外，我们将会使用一个 loop 来接受每个连接的多个命令。</p>
+<pre><pre class="playground"><code class="language-rust">use mini_redis::{Connection, Frame};
+use tokio::net::{TcpListener, TcpStream};
+
+#[tokio::main]
+async fn main() {
+    // 绑定 listener 到一个地址
+    let listener = TcpListener::bind(&quot;127.0.0.1:6379&quot;).await.unwrap();
+
+    loop {
+        // 解构出来的第二个 item 包含一个新 connection 的一对 IP 和 port，这里将其忽略了
+        let (socket, _) = listener.accept().await.unwrap();
+
+        // 生成一个新任务，socket 的所有权被移动到了这个新任务里面，并在那里被处理。
+        tokio::spawn(async move { process(socket).await });
+    }
+}
+
+async fn process(socket: TcpStream) {
+    use mini_redis::Command::{self, Get, Set};
+    use std::collections::HashMap;
+
+    // 一个 `HashMap` 用来存储数据
+    let mut db = HashMap::new();
+
+    // `Connection` 让我们能够读写 redis **frames**(抽象的帧) 而不是
+    // byte streams(字节流). `Connection` 类型由 mini-redis 定义。
+    let mut connection = Connection::new(socket);
+
+    // 使用 `read_frame` 来从`connection`接收一个`Command`。
+    while let Some(frame) = connection.read_frame().await.unwrap() {
+        let response = match Command::from_frame(frame).unwrap() {
+            Set(cmd) =&gt; {
+                // 值被存储为 `Vec&lt;u8&gt;`
+                db.insert(cmd.key().to_string(), cmd.value().to_vec());
+                Frame::Simple(&quot;OK&quot;.to_string())
+            }
+            Get(cmd) =&gt; {
+                if let Some(value) = db.get(cmd.key()) {
+                    // `Frame::Bulk` 期望数据是`Bytes` 类型的。
+                    // 这个类型将会在教程的后面部分讨论。
+                    // 现在`&amp;Vec&lt;u8&gt;` 通过 `into()` 被转换成了 `Bytes` 。
+                    Frame::Bulk(value.clone().into())
+                } else {
+                    Frame::Null
+                }
+            }
+            cmd =&gt; panic!(&quot;unimplemented {:?}&quot;, cmd),
+        };
+
+        // Write the response to the client
+        connection.write_frame(&amp;response).await.unwrap();
+    }
+}
+
+</code></pre></pre>
+<p>让我们来试一试：</p>
+<pre><code class="language-zsh">cargo run
+</code></pre>
+<p>另一个终端窗口执行：</p>
+<pre><code class="language-zsh">cargo run --example hello-redis
+</code></pre>
+<p>出现了如下输出：</p>
+<pre><code class="language-zsh">从服务端得到了值; result=Some(b&quot;world&quot;)
+</code></pre>
+<p>我们现在可以获取和设置值，但是有一个问题：这些值在连接之间不共享。如果另一个套接字连接并尝试获取hello键，它将找不到任何东西。</p>
+<p>在下一节中，我们将为所有套接字实现持久化数据。</p>
 
                     <div id="giscus-container"></div>
                 </main>
@@ -348,7 +533,7 @@ help: to force the async block to take ownership of `v` (and any other
                         title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
-                    <a rel="next" href="../../issues/issues.html" class="mobile-nav-chapters next"
+                    <a rel="next" href="../../rust/mini-redis/shared_state.html" class="mobile-nav-chapters next"
                         title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
@@ -362,7 +547,7 @@ help: to force the async block to take ownership of `v` (and any other
                 aria-label="Previous chapter" aria-keyshortcuts="Left">
                 <i class="fa fa-angle-left"></i>
             </a>
-            <a rel="next" href="../../issues/issues.html" class="nav-chapters next" title="Next chapter"
+            <a rel="next" href="../../rust/mini-redis/shared_state.html" class="nav-chapters next" title="Next chapter"
                 aria-label="Next chapter" aria-keyshortcuts="Right">
                 <i class="fa fa-angle-right"></i>
             </a>
