--- a/rust/mini-redis/channels.html
+++ b/rust/mini-redis/channels.html
@@ -174,7 +174,11 @@
                 </div>
                 <main>
                     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
-<h1 id="channels-todo"><a class="header" href="#channels-todo">Channels TODO</a></h1>
+<h2 id="channels-todo"><a class="header" href="#channels-todo">Channels TODO</a></h2>
+<p>现在我们已经了解了一些关于 Tokio 的并发，让我们把它们应用到客户端侧吧。把我们先前写的服务端的代码移动到一个显式的二进制文件里去：</p>
+<pre><code class="language-zsh">mkdir src/bin
+mv src/main.rs src/bin/server.rs
+</code></pre>
 
                     <div id="giscus-container"></div>
                 </main>
