--- a/rust/mini-redis/channels.html
+++ b/rust/mini-redis/channels.html
@@ -179,6 +179,62 @@
 <pre><code class="language-zsh">mkdir src/bin
 mv src/main.rs src/bin/server.rs
 </code></pre>
+<p>然后创建一个新的 binary 来放我们的客户端代码：</p>
+<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>touch src/bin/client.rs
+<span class="boring">}
+</span></code></pre></pre>
+<p>在这个文件中，我们将会写关于本节的代码。无论何时你想运行它，请先启动 server 端：</p>
+<pre><code class="language-zsh">cargo run --bin server
+</code></pre>
+<p>然后在另一个终端窗口：</p>
+<pre><code class="language-zsh">cargo run --bin client
+</code></pre>
+<p>话都说到这个份上了，来让我们开始 code 吧！</p>
+<p>比如说我门想要运行两个并发的 Redis commands。我们可以为每个 command 生成一个任务。然后两个命令就能并发啦～</p>
+<p>一开始啊，我们可能会想到下面这种方式：</p>
+<pre><pre class="playground"><code class="language-rust">use mini_redis::client;
+
+#[tokio::main]
+async fn main() {
+    // Establish a connection to the server
+    let mut client = client::connect(&quot;127.0.0.1:6379&quot;).await.unwrap();
+
+    // Spawn two tasks, one gets a key, the other sets a key
+    let t1 = tokio::spawn(async {
+        let res = client.get(&quot;hello&quot;).await;
+    });
+
+    let t2 = tokio::spawn(async {
+        client.set(&quot;foo&quot;, &quot;bar&quot;.into()).await;
+    });
+
+    t1.await.unwrap();
+    t2.await.unwrap();
+}
+</code></pre></pre>
+<p>不幸的是呢，编译器阻止了我们继续，因为两个任务都需要用某种方式访问 <code>client</code> 。由于</p>
+<p><code>Client</code> 并没有实现 <code>Copy</code> trait ，所以如果没有一些代码来促成 <code>client</code> 的共享是不能被编译通过的。再说，<code>Client::set</code> 需要 <code>&amp;mut self</code> ，这意味着调用它的时候需要独占 <code>Client</code> 的访问。我们可以为每个连接打开一个任务，但是这并不理想。因为 <code>.await</code> 需要带着锁被调用，所以我们不能使用 <code>std::sync::Mutex</code> 。我们可以使用 <code>tokio::sync::Mutex</code> ，但是这会导致同一时间只能有一个请求（即 singleflight 单飞）。如果客户端实现了 <a href="https://redis.io/topics/pipelining">pipelining</a> ，一个异步锁会导致连接的低利用率。</p>
+<h2 id="message-passing-消息传递"><a class="header" href="#message-passing-消息传递">Message passing （消息传递）</a></h2>
+<p>实践答案是使用消息传递！这种模式包含生成一个专门的任务来管理 <code>client</code> 资源。任何想要发起请求的任务都要发送消息给这个 <code>client</code> 任务。<code>client</code> 任务的角色相当于代理人，它会代表发送者(sender)来发送请求(request)，并把响应(response)发回给发送者(sender)。</p>
+<p>采用这种策略，需要创建一个单独的连接。管理 <code>client</code> 的任务能够独占访问权限以便调用 <code>set</code> 和 <code>get</code> 。此外， channel 以缓冲区的方式工作。当 <code>client</code> 任务正忙的时候，任务可能会被发送到 <code>client</code> 。一旦 <code>client</code> 空闲了，可以处理新请求了，它会从 channel 拉去下一个请求。这种方式可以有更好的吞吐量，并且能够被拓展，支持连接池。</p>
+<h2 id="tokios-channel-primitives-tokio-的通道原语"><a class="header" href="#tokios-channel-primitives-tokio-的通道原语">Tokio's channel primitives （Tokio 的通道原语）</a></h2>
+<p>Tokio 提供了 <a href="https://docs.rs/tokio/1/tokio/sync/index.html">一些 channel</a> ，每个都有不一样的目的。</p>
+<ul>
+<li>
+<p><a href="https://docs.rs/tokio/1/tokio/sync/mpsc/index.html">mpsc</a>：多生产者，单消费者的 channel。可以发送许多值。</p>
+</li>
+<li>
+<p><a href="https://docs.rs/tokio/1/tokio/sync/oneshot/index.html">oneshot</a>：单生产者，单消费者的 channel。可以发送单个值。</p>
+</li>
+<li>
+<p><a href="https://docs.rs/tokio/1/tokio/sync/broadcast/index.html">broadcast</a>：多生产者，多消费者。可以发送许多值，每个接收者都能看到每个值。</p>
+</li>
+<li>
+<p><a href="https://docs.rs/tokio/1/tokio/sync/watch/index.html">watch</a>：单生产者，多消费者。可以发送许多值，但是不会保留历史值。接收者只能看到最新的值。</p>
+</li>
+</ul>
 
                     <div id="giscus-container"></div>
                 </main>
