deploy: 6ebcf67fb1e00c4b82062ed06a43518d2c713253

--- a/issues/nginx/nginx_issues.html
+++ b/issues/nginx/nginx_issues.html
@@ -214,6 +214,9 @@
     proxy_pass https://baidu.com;
 }
 </code></pre>
+<h2 id="location"><a class="header" href="#location">location</a></h2>
+<p><a href="https://nginx.org/en/docs/http/ngx_http_core_module.html#location">Module ngx_http_core_module#location</a></p>
+<p>路径正则匹配是选择匹配度最高的一条规则（nginx 会先选中前缀最长的，然后在逐个规则匹配，匹配成功后不再继续匹配）</p>
 
                     <div id="giscus-container"></div>
                 </main>
