--- a/print.html
+++ b/print.html
@@ -1747,6 +1747,9 @@ mysqld --user=&lt;USER&gt;
     proxy_pass https://baidu.com;
 }
 </code></pre>
+<h2 id="location"><a class="header" href="#location">location</a></h2>
+<p><a href="https://nginx.org/en/docs/http/ngx_http_core_module.html#location">Module ngx_http_core_module#location</a></p>
+<p>路径正则匹配是选择匹配度最高的一条规则（nginx 会先选中前缀最长的，然后在逐个规则匹配，匹配成功后不再继续匹配）</p>
 <div style="break-before: page; page-break-before: always;"></div><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
 <h1 id="这里存放一些连接"><a class="header" href="#这里存放一些连接">这里存放一些连接</a></h1>
 <h2 id="tcp"><a class="header" href="#tcp">TCP</a></h2>
